@@ -1,7 +1,7 @@
 /*
  * @(#) src/games/stendhal/common/ConfigurableFactoryHelper.java
  *
- * $Id: ConfigurableFactoryHelper.java,v 1.4 2008/07/12 19:17:31 astridemma Exp $
+ * $Id$
  */
 
 package games.stendhal.server.core.config.factory;
@@ -22,17 +22,17 @@ public class ConfigurableFactoryHelper {
 	 * target class and returns <code>null</code> if the factory returns an
 	 * incompatible object. This allows the called to cast the return values
 	 * without worrying about ClassCastExceptions.
-	 * 
+	 *
 	 * @param factory
 	 *            Object factory.
 	 * @param ctx
 	 *            Configuration context.
 	 * @param clazz
 	 *            The target class.
-	 * 
+	 *
 	 * @return A new object, or <code>null</code> if allowed by the factory
 	 *         type, or of the wrong class.
-	 * 
+	 *
 	 * @throws IllegalArgumentException
 	 *             If there is a problem with the attributes. The exception
 	 *             message should be a value suitable for meaningful user
@@ -54,7 +54,7 @@ public class ConfigurableFactoryHelper {
 	/**
 	 * Create an object factory using a [logical] class name.
 	 * <p>
-	 * 
+	 *
 	 * <p>
 	 * This will attempt to create a factory for the class in the following
 	 * order:
@@ -62,24 +62,24 @@ public class ConfigurableFactoryHelper {
 	 * <li>If a class named <em>&lt;class-name&gt</em><code>Factory</code>
 	 * exists and implements <code>ConfigurableFactory</code>, return an
 	 * instance of it.
-	 * 
+	 *
 	 * <li>If a class named <em>&lt;class-name&gt</em> exists and implements
 	 * <code>ConfigurableFactory</code>, return an instance of it.
-	 * 
+	 *
 	 * <li>If a class named <em>&lt;class-name&gt</em> exists and accepts a
 	 * constructor with ConfigurableFactoryContext, return a factory that
 	 * creates an instance with that constructor when used.
-	 * 
+	 *
 	 * <li>If a class named <em>&lt;class-name&gt</em> exists and has a
 	 * default constructor, return a factory that creates an instance with that
 	 * constructor when used.
-	 * 
+	 *
 	 * <li>Returns <code>null</code>,
 	 * </ul>
-	 * 
+	 *
 	 * @param className
 	 *            A base class name to load.
-	 * 
+	 *
 	 * @return A factory, or <code>null</code> if no valid class was found.
 	 */
 	public static ConfigurableFactory getFactory(final String className) {
@@ -95,7 +95,7 @@ public class ConfigurableFactoryHelper {
 			 */
 			if (ConfigurableFactory.class.isAssignableFrom(clazz)) {
 				try {
-					return (ConfigurableFactory) clazz.newInstance();
+					return (ConfigurableFactory) clazz.getDeclaredConstructor().newInstance();
 				} catch (final InstantiationException ex) {
 					throw new IllegalArgumentException(
 							"Class is not instantiatable: " + clazz.getName(),
@@ -103,6 +103,12 @@ public class ConfigurableFactoryHelper {
 				} catch (final IllegalAccessException ex) {
 					throw new IllegalArgumentException(
 							"Unable to access class: " + clazz.getName(), ex);
+				} catch (final NoSuchMethodException ex) {
+					throw new IllegalArgumentException("Method not found: "
+							+ clazz.getName(), ex);
+				} catch (final InvocationTargetException ex) {
+					throw new IllegalArgumentException("Invocation failure: "
+							+ clazz.getName(), ex);
 				}
 			}
 		} catch (final ClassNotFoundException ex) {
@@ -120,13 +126,19 @@ public class ConfigurableFactoryHelper {
 			 */
 			if (ConfigurableFactory.class.isAssignableFrom(clazz)) {
 				try {
-					return (ConfigurableFactory) clazz.newInstance();
+					return (ConfigurableFactory) clazz.getDeclaredConstructor().newInstance();
 				} catch (final InstantiationException ex) {
 					throw new IllegalArgumentException(
 							"Class is not instantiatable: " + className, ex);
 				} catch (final IllegalAccessException ex) {
 					throw new IllegalArgumentException(
 							"Unable to access class: " + className, ex);
+				} catch (final NoSuchMethodException ex) {
+					throw new IllegalArgumentException("Method not found: "
+							+ clazz.getName(), ex);
+				} catch (final InvocationTargetException ex) {
+					throw new IllegalArgumentException("Invocation failure: "
+							+ clazz.getName(), ex);
 				}
 			}
 
@@ -179,6 +191,7 @@ public class ConfigurableFactoryHelper {
 		// ConfigurableFactory
 		//
 
+		@Override
 		public Object create(final ConfigurableFactoryContext ctx) {
 			try {
 				return cnstr.newInstance(new Object[] { ctx });
@@ -211,14 +224,21 @@ public class ConfigurableFactoryHelper {
 		// ConfigurableFactory
 		//
 
+		@Override
 		public Object create(final ConfigurableFactoryContext ctx) {
 			try {
-				return clazz.newInstance();
+				return clazz.getDeclaredConstructor().newInstance();
 			} catch (final InstantiationException ex) {
 				throw new IllegalArgumentException(
 						"Class is not instantiatable: " + clazz.getName(), ex);
 			} catch (final IllegalAccessException ex) {
 				throw new IllegalArgumentException("Unable to access class: "
+						+ clazz.getName(), ex);
+			} catch (final NoSuchMethodException ex) {
+				throw new IllegalArgumentException("Method not found: "
+						+ clazz.getName(), ex);
+			} catch (final InvocationTargetException ex) {
+				throw new IllegalArgumentException("Invocation failure: "
 						+ clazz.getName(), ex);
 			}
 		}
