@@ -11,9 +11,8 @@
  ***************************************************************************/
 package games.stendhal.server.core.scripting;
 
-import games.stendhal.server.entity.player.Player;
-
 import java.io.File;
+import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.net.MalformedURLException;
@@ -22,6 +21,8 @@ import java.net.URLClassLoader;
 import java.util.List;
 
 import org.apache.log4j.Logger;
+
+import games.stendhal.server.entity.player.Player;
 
 /**
  * Manager for scripts written in Java.
@@ -35,6 +36,7 @@ public class ScriptInJava extends ScriptingSandbox {
 	private Script script;
 
 	private final String classname;
+	private URLClassLoader classloader;
 
 	/**
 	 * Creates a new script written in Java.
@@ -64,10 +66,10 @@ public class ScriptInJava extends ScriptingSandbox {
 		// Create new class loader
 		// with current dir as CLASSPATH
 		final File file = new File("./data/script");
-		final ClassLoader loader = new URLClassLoader(new URL[] { file.toURI().toURL() });
+		this.classloader = new URLClassLoader(new URL[] { file.toURI().toURL() });
 		// load class through new loader
-		final Class< ? > aClass = loader.loadClass(classname);
-		script = (Script) aClass.newInstance();
+		final Class< ? > aClass = classloader.loadClass(classname);
+		script = (Script) aClass.getDeclaredConstructor().newInstance();
 	}
 
 	/**
@@ -78,9 +80,6 @@ public class ScriptInJava extends ScriptingSandbox {
 	 * @param args
 	 *            the arguments the admin specified or <code>null</code> on
 	 *            server start.
-	 * @param sandbox
-	 *            all modifications to the game must be done using this object
-	 *            in order for the script to be unloadable
 	 */
 	@Override
 	public boolean load(final Player admin, final List<String> args) {
@@ -121,6 +120,11 @@ public class ScriptInJava extends ScriptingSandbox {
 			setMessage(e.getMessage());
 			postExecute(admin, args, false);
 			return false;
+		} catch (final Error e) {
+			logger.error(e, e);
+			setMessage(e.getMessage());
+			postExecute(admin, args, false);
+			return false;
 		}
 		postExecute(admin, args, true);
 		return true;
@@ -146,6 +150,12 @@ public class ScriptInJava extends ScriptingSandbox {
 		} catch (final Exception e) {
 			logger.error(e, e);
 			setMessage(e.getMessage());
+		}
+
+		try {
+			this.classloader.close();
+		} catch (IOException e) {
+			logger.warn("tried to close loader", e);
 		}
 
 		super.unload(admin, args);
